--- a/railway.toml
+++ b/railway.toml
@@ -2,8 +2,10 @@
 sourceDir = "frontend"
 dockerfilePath = "frontend/Dockerfile"
 port = 3000
+buildCommand = "docker build -f frontend/Dockerfile -t frontend ."
 
 [services.backend]
 sourceDir = "backend"
 dockerfilePath = "backend/Dockerfile"
 port = 8080
+buildCommand = "docker build -f backend/Dockerfile -t backend ."
